[package]
name = "oauth2"
authors = [
    "Alex Crichton <alex@alexcrichton.com>",
    "Martin Pool <mbp@sourcefrog.net>"]
version = "0.1.9"
license = "MIT/Apache-2.0"
description = "Bindings for exchanging OAuth 2 tokens"
repository = "https://github.com/alexcrichton/oauth2-rs"

[dependencies]
curl = "0.2.0"
url = "0.2.0"
log = "0.3"
rustc-serialize = "*"
